Desc.: Added new hash mode -m 13100 = Kerberos 5 TGS-REP etype 23
Issue: 81

Type.: Feature
File.: Kernel
Desc.: Added new hash mode -m 13200 = AxCrypt

Type.: Feature
File.: Kernel
Desc.: Added new hash mode -m 13300 = AxCrypt in memory SHA1

Type.: Feature
File.: Kernel
Desc.: Added new hash mode -m 13400 = Keepass 1 (AES/Twofish) and Keepass 2 (AES)
Issue: 92

Type.: Feature
File.: Kernel
Desc.: Extended support from 14 to 255 functions calls per rule on GPU

Type.: Feature
File.: Kernel
Desc.: Added support for vector width 16
Issue: 226

Type.: Feature
File.: Host
Desc.: Added support to utilize multiple different OpenCL platforms in parallel, ex: AMD + NV
Issue: 2

Type.: Feature
File.: Host
Desc.: Added support to utilize OpenCL devices-types other than GPU, ex: CPU or FPGA
Issue: 2

Type.: Feature
File.: Host
Desc.: Added support to utilize multiple different OpenCL devices-types in parallel, ex: GPU + CPU
Issue: 2

Type.: Feature
File.: Host
Desc.: Added a Makefile target for native compilation
Issue: 2

Type.: Feature
File.: Host
Desc.: Switched to Khronos OSS OpenCL reference implementation for building
Issue: 2

Type.: Feature
File.: Host
Desc.: No longer requires NV CUDA-SDK, NV ForceWare, NVML, NVAPI, AMD APP-SDK and AMD ADL in depencies
Issue: 2

Type.: Feature
File.: Host
Desc.: Added option --opencl-platform to select specific OpenCL platforms
Issue: 2

Type.: Feature
File.: Host
Desc.: Added option --opencl-device-types to select specific OpenCL device types
Issue: 2

Type.: Feature
File.: Host
Desc.: Added option --opencl-vector-width to override automatically selected vector-width size
Issue: 2

Type.: Feature
File.: Host
Desc.: Added autotuning engine and tuning database

Type.: Feature
File.: Host
Desc.: Implemented a new feature that allows to quit at next restore point update (and disable it)
Issue: 10

Type.: Feature
File.: Host
Desc.: Added the execution time of the running kernel to the status display

Type.: Feature
File.: Host