@@ -34,6 +34,10 @@ Issue: 92
 
 Type.: Feature
 File.: Kernel
+Desc.: Added new hash mode -m 125 = ArubaOS
+
+Type.: Feature
+File.: Kernel
 Desc.: Extended support from 14 to 255 functions calls per rule on GPU
 
 Type.: Feature
